--- a/notebooks/examples.ipynb
+++ b/notebooks/examples.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "caroline-trial",
+   "id": "suspended-dictionary",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "fantastic-treaty",
+   "id": "sensitive-finger",
    "metadata": {},
    "outputs": [
     {
@@ -48,37 +48,37 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0.213912</td>\n",
-       "      <td>0.915974</td>\n",
-       "      <td>0.016774</td>\n",
-       "      <td>B</td>\n",
+       "      <td>0.819162</td>\n",
+       "      <td>0.801597</td>\n",
+       "      <td>0.806771</td>\n",
+       "      <td>G</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>0.954656</td>\n",
-       "      <td>0.826894</td>\n",
-       "      <td>0.330561</td>\n",
-       "      <td>F</td>\n",
+       "      <td>0.717698</td>\n",
+       "      <td>0.309595</td>\n",
+       "      <td>0.495842</td>\n",
+       "      <td>B</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>0.254031</td>\n",
-       "      <td>0.455129</td>\n",
-       "      <td>0.722906</td>\n",
+       "      <td>0.454103</td>\n",
+       "      <td>0.817916</td>\n",
+       "      <td>0.184145</td>\n",
        "      <td>C</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>0.121346</td>\n",
-       "      <td>0.967093</td>\n",
-       "      <td>0.698138</td>\n",
-       "      <td>G</td>\n",
+       "      <td>0.964082</td>\n",
+       "      <td>0.516785</td>\n",
+       "      <td>0.311867</td>\n",
+       "      <td>F</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>0.304342</td>\n",
-       "      <td>0.047430</td>\n",
-       "      <td>0.506171</td>\n",
+       "      <td>0.077463</td>\n",
+       "      <td>0.251543</td>\n",
+       "      <td>0.472809</td>\n",
        "      <td>F</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -87,11 +87,11 @@
       ],
       "text/plain": [
        "          x         y     value group\n",
-       "0  0.213912  0.915974  0.016774     B\n",
-       "1  0.954656  0.826894  0.330561     F\n",
-       "2  0.254031  0.455129  0.722906     C\n",
-       "3  0.121346  0.967093  0.698138     G\n",
-       "4  0.304342  0.047430  0.506171     F"
+       "0  0.819162  0.801597  0.806771     G\n",
+       "1  0.717698  0.309595  0.495842     B\n",
+       "2  0.454103  0.817916  0.184145     C\n",
+       "3  0.964082  0.516785  0.311867     F\n",
+       "4  0.077463  0.251543  0.472809     F"
       ]
      },
      "execution_count": 2,
@@ -115,13 +115,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "macro-concept",
+   "id": "consistent-touch",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "72b6c8565d384316ab64f28b06590621",
+       "model_id": "f6977de541884ae8b9f60b0d60ad8ad5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -138,10 +138,15 @@
     "    data=df,\n",
     "    x='x',\n",
     "    y='y',\n",
-    "    color_by='group',\n",
-    "    connect_by='group',\n",
+    "    color_by='value',\n",
+    "    color_order='reverse',\n",
     "    size_by='value',\n",
     "    opacity_by='value',\n",
+    "    connect_by='group',\n",
+    "    connection_color_by='value',\n",
+    "    connection_color_order='reverse',\n",
+    "    connection_size_by='value',\n",
+    "    height=600\n",
     ")\n",
     "scatterplot.show()"
    ]
@@ -149,58 +154,21 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "mechanical-party",
+   "id": "spare-consequence",
    "metadata": {},
    "outputs": [],
    "source": [
-    "scatterplot.selection = df.query('group == \"G\"').index.values.tolist()"
+    "scatterplot.select(df.query('value > 0.9').index)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "protective-commerce",
+   "execution_count": 12,
+   "id": "removable-middle",
    "metadata": {},
    "outputs": [],
    "source": [
-    "scatterplot.selection = []"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "valued-shoot",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "scatterplot = jscatter.plot(\n",
-    "    data=df,\n",
-    "    x='x',\n",
-    "    y='y',\n",
-    "    color='black',\n",
-    "    size_by='value',\n",
-    "    size_map=np.arange(1, 20).tolist(),\n",
-    ")\n",
-    "scatterplot.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "controlling-ecology",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "scatterplot = jscatter.plot(\n",
-    "    data=df,\n",
-    "    x='x',\n",
-    "    y='y',\n",
-    "    color='black',\n",
-    "    size_by='value',\n",
-    "    size_map=np.arange(1, 20),\n",
-    "    size_order='reverse'\n",
-    ")\n",
-    "scatterplot.show()"
+    "scatterplot.size = [1, 3, 60, 50, 100]"
    ]
   }
  ],
