Reflect new readme

--- a/notebooks/get-started.ipynb
+++ b/notebooks/get-started.ipynb
@@ -1,45 +1,16 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import ipywidgets as widgets\n",
-    "import numpy as np\n",
-    "import jscatter"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "First we generate some random points."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "n = 500\n",
+    "# Getting Started\n",
     "\n",
-    "points = np.random.rand(n, 2)\n",
+    "The following examples match the code from the _Getting Started_ section of the `README.md`.\n",
     "\n",
-    "# optional continuous values associated to the points\n",
-    "values = np.random.rand(n)\n",
+    "### Simplest Example\n",
     "\n",
-    "# optional: categories associated to the points\n",
-    "categories = (np.random.rand(n) * 10).astype(int)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Then we create the widget using the scatterplot's `plot()` function."
+    "In the simplest case, you can pass the x/y coordinates to the plot function as follows."
    ]
   },
   {
@@ -48,27 +19,210 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "IndexError",
-     "evalue": "arrays used as indices must be of integer (or boolean) type",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-3-cde430ca3421>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mscatterplot\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mjscatter\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mplot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpoints\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcategories\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalues\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mscatterplot\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshow\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/Code/jupyter-scatter/jscatter/jscatter.py\u001b[0m in \u001b[0;36mplot\u001b[0;34m(x, y, data, selection, color, color_by, color_norm, color_order, color_map, size, size_by, size_norm, size_order, size_map, connect, connect_order, background_color, background_image, camera_distance, camera_rotation, camera_target, camera_view, color_active, color_hover, height, lasso_color, lasso_initiator, lasso_min_delay, lasso_min_dist, mouse_mode, opacity, recticle_color, selection_outline_width, selection_size_addition, show_recticle, options)\u001b[0m\n\u001b[1;32m    711\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    712\u001b[0m     \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 713\u001b[0;31m         \u001b[0mpoints\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    714\u001b[0m     \u001b[0;32mexcept\u001b[0m \u001b[0mTypeError\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    715\u001b[0m         \u001b[0mpoints\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0masarray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mIndexError\u001b[0m: arrays used as indices must be of integer (or boolean) type"
-     ]
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ee4688900ae14b7e93fdfb0d1c18c633",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(VBox(children=(Button(button_style='primary', icon='arrows', layout=Layout(width='36px'), style…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "scatterplot = jscatter.plot(points, categories, values)\n",
-    "scatterplot.show()"
+    "import jscatter\n",
+    "import numpy as np\n",
+    "\n",
+    "x = np.random.rand(500)\n",
+    "y = np.random.rand(500)\n",
+    "\n",
+    "jscatter.plot(x, y)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Pandas example\n",
+    "\n",
+    "If your data is stored in a Pandas dataframe, you can reference columns via their name."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "586a3d7881554482961b9479a8e3fb24",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(VBox(children=(Button(button_style='primary', icon='arrows', layout=Layout(width='36px'), style…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "data = np.random.rand(500, 4)\n",
+    "data[:,3] = np.round(data[:,3] * 7).astype(int)\n",
+    "\n",
+    "df = pd.DataFrame(data, columns=['mass', 'speed', 'pval', 'group'])\n",
+    "df['group'] = df['group'].astype('int').astype('category').map(lambda c: chr(65 + c), na_action=None)\n",
+    "\n",
+    "jscatter.plot(data=df, x='mass', y='speed')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Advanced example\n",
+    "\n",
+    "Often you want to customize the visual encoding, such as the point color, size, and opacity."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "b51e14182bba4168b6023b95f3acaeb7",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(VBox(children=(Button(button_style='primary', icon='arrows', layout=Layout(width='36px'), style…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "jscatter.plot(\n",
+    "  data=df,\n",
+    "  x='mass',\n",
+    "  y='speed',\n",
+    "  size=8, # static encoding\n",
+    "  color_by='group', # data-driven encoding\n",
+    "  opacity_by='density', # view-driven encoding\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In the above example, we chose a static point size of `8`. In contrast, the point color is data-driven and assigned based on the `group` value. The point opacity is view-driven and defined dynamically by the number of points currently visible in the view.\n",
+    "\n",
+    "Also notice how jscatter uses an appropriate color map by default based on the data type used for color encoding. In this examples, jscatter uses the color blindness safe color map from [Okabe and Ito](https://jfly.uni-koeln.de/color/#pallet) as the number of categories is less than `9`.\n",
+    "\n",
+    "You can of course customize the color map and many other parameters of the visual encoding as shown next.\n",
+    "\n",
+    "### Functional API example\n",
+    "\n",
+    "The flat API (from above), can get overwhelming when you want to customize a lot of properties. Therefore, jscatter provides a functional API that groups properties by type."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "48474ad380e148309531ca1b3a4c0cff",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(VBox(children=(Button(button_style='primary', icon='arrows', layout=Layout(width='36px'), style…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "scatter = jscatter.Scatter(data=df, x='mass', y='speed')\n",
+    "scatter.selection(df.query('mass < 0.5').index)\n",
+    "scatter.color(by='mass', map='plasma', order='reverse')\n",
+    "scatter.opacity(by='density')\n",
+    "scatter.size(by='pval', map=[2, 4, 6, 8, 10])\n",
+    "scatter.height(300)\n",
+    "scatter.background('black')\n",
+    "scatter.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You can update properties interactively as well after having called `scatter.show()`. The plot will update automatically.\n",
+    "\n",
+    "Finally, all arguments are optional. If you specify an argument, the function will act as a setter and change the property. If you call a function without any arguments it will act as a getter and return the property (or properties). For example, `scatter.selection()` will return the _currently_ selected points."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([  0,   1,   2,   3,   5,   9,  10,  11,  12,  14,  17,  18,  19,\n",
+       "        20,  21,  24,  31,  32,  34,  35,  38,  39,  40,  47,  48,  49,\n",
+       "        50,  51,  52,  53,  54,  57,  58,  60,  65,  67,  68,  69,  72,\n",
+       "        76,  79,  82,  85,  86,  87,  90,  95,  97,  98,  99, 103, 105,\n",
+       "       106, 108, 111, 112, 118, 119, 120, 121, 124, 125, 126, 129, 130,\n",
+       "       133, 136, 137, 140, 142, 143, 145, 147, 148, 149, 152, 153, 154,\n",
+       "       159, 160, 162, 164, 170, 175, 178, 180, 181, 183, 185, 188, 192,\n",
+       "       194, 195, 197, 198, 199, 200, 201, 202, 203, 204, 205, 206, 207,\n",
+       "       208, 209, 214, 218, 221, 223, 225, 229, 230, 231, 234, 236, 237,\n",
+       "       239, 240, 249, 251, 252, 258, 260, 263, 264, 265, 266, 267, 268,\n",
+       "       269, 271, 272, 274, 276, 278, 280, 283, 284, 286, 289, 290, 291,\n",
+       "       296, 299, 301, 304, 307, 309, 310, 311, 313, 315, 316, 318, 319,\n",
+       "       322, 323, 328, 329, 331, 332, 337, 338, 342, 343, 345, 346, 347,\n",
+       "       349, 350, 351, 355, 357, 358, 359, 360, 363, 364, 368, 369, 371,\n",
+       "       372, 373, 375, 376, 378, 380, 381, 382, 383, 386, 387, 390, 391,\n",
+       "       394, 396, 398, 399, 400, 401, 403, 404, 406, 407, 409, 412, 419,\n",
+       "       421, 422, 424, 428, 429, 431, 432, 435, 436, 437, 439, 442, 446,\n",
+       "       450, 451, 452, 460, 461, 462, 464, 472, 473, 477, 478, 479, 483,\n",
+       "       490, 493, 496, 497, 498])"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "scatter.selection()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Interactivity\n",
+    "\n",
     "The scatter plot is interactive! It supports pan-and-zoom, hover, click, and lasso interactions:\n",
     "\n",
     "- **Pan**: Click and drag your mouse.\n",
@@ -78,11 +232,7 @@
     "- **Deselect**: Double-click onto an empty region.\n",
     "- **Rotate**: While pressing <kbd>ALT</kbd>, click and drag your mouse.\n",
     "\n",
-    "The best part, the point selection is reflected in `scatterplot.selected_points`. And you can even adjusted the selection in both ways!\n",
-    "\n",
-    "The selection isn't of course not the only thing you can adjust so keep reading!\n",
-    "\n",
-    "## Properties\n",
+    "### Widget Properties\n",
     "\n",
     "You can adjust the scatter plot to your needs by adjusting the following properties:\n",
     "\n",
@@ -116,56 +266,7 @@
     "- `point_size_selected` [int]\n",
     "- `point_outline_width` [int]\n",
     "- `show_recticle` [bool]\n",
-    "- `recticle_color` [string|quadruple]\n",
-    "\n",
-    "**Other Options:**\n",
-    "\n",
-    "- `other_options` [dict]: for all other properties understood by [regl-scatterplot](https://github.com/flekschas/regl-scatterplot#scatterplot.set)\n",
-    "\n",
-    "For instance, the following call will activate the recticle that is being shown upon hovering a dot in the plot above:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "scatterplot.show_recticle = True"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Interactively Adjusting Options\n",
-    "\n",
-    "To streamline adjusting visual options you can use `scatterplot.options()`."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "scatterplot.options()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "It's also possible to display a individual UI widgets. Simply append `_widget` to any of the options mentioned above. For instance:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "scatterplot.point_size_widget"
+    "- `recticle_color` [string|quadruple]"
    ]
   },
   {
