--- a/notebooks/get-started.ipynb
+++ b/notebooks/get-started.ipynb
@@ -15,13 +15,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ee4688900ae14b7e93fdfb0d1c18c633",
+       "model_id": "c201de9d84844b928b0b89ce96cbebc9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -54,13 +54,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "586a3d7881554482961b9479a8e3fb24",
+       "model_id": "df5617e66be74101817b85a5e817482f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -95,13 +95,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b51e14182bba4168b6023b95f3acaeb7",
+       "model_id": "bc81a990588a49a6961a6d7eb833d888",
        "version_major": 2,
        "version_minor": 0
       },
@@ -141,13 +141,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "48474ad380e148309531ca1b3a4c0cff",
+       "model_id": "cb10b4cfc61d47078010bde36c01680c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -174,41 +174,66 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You can update properties interactively as well after having called `scatter.show()`. The plot will update automatically.\n",
+    "The scatter plot is **interactive**! It supports pan-and-zoom, hover, click, and lasso interactions:\n",
     "\n",
+    "- **Pan**: Click and drag your mouse.\n",
+    "- **Zoom**: Scroll vertically.\n",
+    "- **Select a single dot**: Click on a dot with your mouse.\n",
+    "- **Select multiple dots**: While pressing <kbd>SHIFT</kbd>, click and drag your mouse. All items within the lasso will be selected. You can also click once into the void and a translucent circle will appear. When you mousedown into this circle and then drag the mouse you can also lasso-select points!\n",
+    "- **Deselect**: Double-click onto an empty region.\n",
+    "- **Rotate**: While pressing <kbd>ALT</kbd>, click and drag your mouse.\n",
+    "\n",
+    "Moreover, you can also update the plot dynamically with Python after having called `scatter.show()`. For instance, the following call will swap the x and y axes. The transition is animated to better follow the change."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scatter.xy(x='speed', y='mass')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Finally, all arguments are optional. If you specify an argument, the function will act as a setter and change the property. If you call a function without any arguments it will act as a getter and return the property (or properties). For example, `scatter.selection()` will return the _currently_ selected points."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([  0,   1,   2,   3,   5,   9,  10,  11,  12,  14,  17,  18,  19,\n",
-       "        20,  21,  24,  31,  32,  34,  35,  38,  39,  40,  47,  48,  49,\n",
-       "        50,  51,  52,  53,  54,  57,  58,  60,  65,  67,  68,  69,  72,\n",
-       "        76,  79,  82,  85,  86,  87,  90,  95,  97,  98,  99, 103, 105,\n",
-       "       106, 108, 111, 112, 118, 119, 120, 121, 124, 125, 126, 129, 130,\n",
-       "       133, 136, 137, 140, 142, 143, 145, 147, 148, 149, 152, 153, 154,\n",
-       "       159, 160, 162, 164, 170, 175, 178, 180, 181, 183, 185, 188, 192,\n",
-       "       194, 195, 197, 198, 199, 200, 201, 202, 203, 204, 205, 206, 207,\n",
-       "       208, 209, 214, 218, 221, 223, 225, 229, 230, 231, 234, 236, 237,\n",
-       "       239, 240, 249, 251, 252, 258, 260, 263, 264, 265, 266, 267, 268,\n",
-       "       269, 271, 272, 274, 276, 278, 280, 283, 284, 286, 289, 290, 291,\n",
-       "       296, 299, 301, 304, 307, 309, 310, 311, 313, 315, 316, 318, 319,\n",
-       "       322, 323, 328, 329, 331, 332, 337, 338, 342, 343, 345, 346, 347,\n",
-       "       349, 350, 351, 355, 357, 358, 359, 360, 363, 364, 368, 369, 371,\n",
-       "       372, 373, 375, 376, 378, 380, 381, 382, 383, 386, 387, 390, 391,\n",
-       "       394, 396, 398, 399, 400, 401, 403, 404, 406, 407, 409, 412, 419,\n",
-       "       421, 422, 424, 428, 429, 431, 432, 435, 436, 437, 439, 442, 446,\n",
-       "       450, 451, 452, 460, 461, 462, 464, 472, 473, 477, 478, 479, 483,\n",
-       "       490, 493, 496, 497, 498])"
+       "array([  1,   2,   3,   4,   9,  12,  13,  16,  17,  19,  20,  21,  22,\n",
+       "        23,  24,  25,  29,  33,  35,  36,  37,  38,  39,  40,  41,  43,\n",
+       "        44,  46,  51,  54,  59,  60,  61,  63,  64,  67,  68,  70,  73,\n",
+       "        74,  77,  78,  79,  80,  82,  83,  86,  91,  92,  95,  97,  98,\n",
+       "       101, 103, 104, 105, 106, 108, 110, 112, 113, 114, 116, 117, 118,\n",
+       "       119, 121, 126, 128, 129, 130, 131, 132, 133, 134, 136, 138, 140,\n",
+       "       141, 142, 144, 148, 149, 151, 152, 153, 158, 160, 164, 165, 171,\n",
+       "       176, 179, 181, 182, 183, 185, 186, 187, 188, 189, 190, 192, 193,\n",
+       "       194, 195, 198, 199, 201, 203, 204, 205, 206, 207, 208, 209, 215,\n",
+       "       216, 217, 218, 221, 222, 223, 224, 225, 226, 227, 228, 229, 235,\n",
+       "       237, 239, 240, 241, 244, 245, 247, 249, 250, 253, 256, 258, 259,\n",
+       "       262, 263, 264, 266, 268, 269, 271, 272, 275, 276, 279, 285, 286,\n",
+       "       287, 289, 291, 292, 293, 294, 295, 296, 298, 299, 301, 305, 307,\n",
+       "       308, 309, 310, 315, 317, 318, 319, 320, 322, 326, 330, 332, 333,\n",
+       "       334, 337, 341, 345, 346, 348, 349, 352, 355, 357, 358, 360, 366,\n",
+       "       367, 369, 370, 371, 373, 374, 376, 378, 380, 381, 382, 383, 385,\n",
+       "       386, 390, 391, 394, 396, 398, 399, 400, 402, 403, 404, 407, 408,\n",
+       "       409, 411, 412, 416, 417, 418, 420, 421, 423, 424, 426, 427, 429,\n",
+       "       430, 433, 434, 442, 443, 446, 448, 449, 451, 452, 454, 456, 457,\n",
+       "       463, 464, 465, 473, 476, 477, 478, 480, 484, 485, 490, 491, 492,\n",
+       "       493, 496, 498])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -218,99 +243,11 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Interactivity\n",
-    "\n",
-    "The scatter plot is interactive! It supports pan-and-zoom, hover, click, and lasso interactions:\n",
-    "\n",
-    "- **Pan**: Click and drag your mouse.\n",
-    "- **Zoom**: Scroll vertically.\n",
-    "- **Select a single dot**: Click on a dot with your mouse.\n",
-    "- **Select multiple dots**: While pressing <kbd>SHIFT</kbd>, click and drag your mouse. All items within the lasso will be selected.\n",
-    "- **Deselect**: Double-click onto an empty region.\n",
-    "- **Rotate**: While pressing <kbd>ALT</kbd>, click and drag your mouse.\n",
-    "\n",
-    "### Widget Properties\n",
-    "\n",
-    "You can adjust the scatter plot to your needs by adjusting the following properties:\n",
-    "\n",
-    "**Data:**\n",
-    "\n",
-    "- `points` [list]\n",
-    "- `selected_points` [list]\n",
-    "- `hovered_point` [int] (read only)\n",
-    "\n",
-    "**Camera:**\n",
-    "\n",
-    "- `camera_target` [tuple]\n",
-    "- `camera_distance` [float]\n",
-    "- `camera_rotation` [float]\n",
-    "- `camera_view` [list]\n",
-    "\n",
-    "**Visual:**\n",
-    "\n",
-    "- `color_by` [None, 'category', or 'value']\n",
-    "- `height` [int]\n",
-    "- `background_color` [string|quadruple]\n",
-    "- `background_image` [string]\n",
-    "- `lasso_color` [string|quadruple]\n",
-    "- `lasso_min_delay` [int]\n",
-    "- `lasso_min_dist` [float]\n",
-    "- `point_color` [string|quadruple]\n",
-    "- `point_color_active` [string|quadruple]\n",
-    "- `point_color_hover` [string|quadruple]\n",
-    "- `point_opacity` [float]\n",
-    "- `point_size` [int]\n",
-    "- `point_size_selected` [int]\n",
-    "- `point_outline_width` [int]\n",
-    "- `show_recticle` [bool]\n",
-    "- `recticle_color` [string|quadruple]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Select Points\n",
-    "\n",
-    "You can select points interactively using mouse click and lasso interactions as described above or you can programmatically select points. `scatterplot.selected_points` is a list of point indices. For example, to select the first 10 points we can do:"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "scatterplot.selected_points = list(range(12))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "For convenience we provide two widgets to display the selected point indices and the index of the hovered point."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "display(scatterplot.hovered_point_widget, scatterplot.selected_points_widget)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "jscatter.plot()"
-   ]
+   "source": []
   }
  ],
  "metadata": {
