--- a/notebooks/examples.ipynb
+++ b/notebooks/examples.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "weekly-modem",
+   "id": "agreed-heater",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "incorrect-minutes",
+   "id": "narrative-stuff",
    "metadata": {},
    "outputs": [
     {
@@ -49,43 +49,43 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0.658426</td>\n",
-       "      <td>0.682262</td>\n",
-       "      <td>0.614013</td>\n",
-       "      <td>F</td>\n",
-       "      <td>0.739413</td>\n",
+       "      <td>0.137755</td>\n",
+       "      <td>0.271790</td>\n",
+       "      <td>0.512896</td>\n",
+       "      <td>G</td>\n",
+       "      <td>0.597200</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>0.767932</td>\n",
-       "      <td>0.907164</td>\n",
-       "      <td>0.822438</td>\n",
-       "      <td>D</td>\n",
-       "      <td>0.451547</td>\n",
+       "      <td>0.876944</td>\n",
+       "      <td>0.935858</td>\n",
+       "      <td>0.805132</td>\n",
+       "      <td>B</td>\n",
+       "      <td>0.428691</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>0.184592</td>\n",
-       "      <td>0.974775</td>\n",
-       "      <td>0.330097</td>\n",
-       "      <td>B</td>\n",
-       "      <td>0.136393</td>\n",
+       "      <td>0.107886</td>\n",
+       "      <td>0.252273</td>\n",
+       "      <td>0.256287</td>\n",
+       "      <td>F</td>\n",
+       "      <td>0.957269</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>0.113624</td>\n",
-       "      <td>0.217273</td>\n",
-       "      <td>0.767468</td>\n",
-       "      <td>F</td>\n",
-       "      <td>0.962905</td>\n",
+       "      <td>0.031307</td>\n",
+       "      <td>0.902774</td>\n",
+       "      <td>0.016379</td>\n",
+       "      <td>G</td>\n",
+       "      <td>0.151846</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>0.032186</td>\n",
-       "      <td>0.012218</td>\n",
-       "      <td>0.582724</td>\n",
-       "      <td>B</td>\n",
-       "      <td>0.859827</td>\n",
+       "      <td>0.199323</td>\n",
+       "      <td>0.784366</td>\n",
+       "      <td>0.653936</td>\n",
+       "      <td>D</td>\n",
+       "      <td>0.996449</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -93,11 +93,11 @@
       ],
       "text/plain": [
        "          x         y     value group       bla\n",
-       "0  0.658426  0.682262  0.614013     F  0.739413\n",
-       "1  0.767932  0.907164  0.822438     D  0.451547\n",
-       "2  0.184592  0.974775  0.330097     B  0.136393\n",
-       "3  0.113624  0.217273  0.767468     F  0.962905\n",
-       "4  0.032186  0.012218  0.582724     B  0.859827"
+       "0  0.137755  0.271790  0.512896     G  0.597200\n",
+       "1  0.876944  0.935858  0.805132     B  0.428691\n",
+       "2  0.107886  0.252273  0.256287     F  0.957269\n",
+       "3  0.031307  0.902774  0.016379     G  0.151846\n",
+       "4  0.199323  0.784366  0.653936     D  0.996449"
       ]
      },
      "execution_count": 2,
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "associate-literacy",
+   "id": "working-bradley",
    "metadata": {},
    "source": [
     "## Simple Test"
@@ -129,13 +129,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "welsh-documentary",
+   "id": "joint-moral",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "acac2c870c6c4510bb0feb58ee6a0659",
+       "model_id": "8622d671c8714b34b8f848f426990d0f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -148,44 +148,74 @@
     }
    ],
    "source": [
-    "scatter = jscatter.Scatter('x', 'y', df, color_by='value')\n",
+    "scatter = jscatter.Scatter('x', 'y', df)\n",
     "scatter.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "talented-trading",
+   "execution_count": 4,
+   "id": "irish-finding",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<jscatter.jscatter.Scatter at 0x15b5b7d00>"
+       "<jscatter.jscatter.Scatter at 0x165f49820>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "scatter.height(320).size(10).selection(df.query('x < 0.5').index)"
+    "scatter.color(by='group').size(6).height(320).selection(df.query('x < 0.5').index)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "rational-telescope",
+   "execution_count": 5,
+   "id": "respective-mistress",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([  0,   2,   3,   4,   7,   8,   9,  12,  13,  14,  15,  17,  18,\n",
+       "        19,  22,  23,  24,  25,  27,  29,  30,  33,  35,  36,  37,  38,\n",
+       "        42,  44,  45,  47,  48,  49,  50,  51,  52,  55,  57,  59,  60,\n",
+       "        61,  62,  63,  64,  66,  67,  68,  70,  77,  78,  80,  81,  83,\n",
+       "        84,  86,  87,  89,  90,  93,  94,  95, 100, 101, 105, 106, 107,\n",
+       "       108, 109, 110, 111, 114, 116, 118, 121, 124, 128, 129, 130, 131,\n",
+       "       132, 135, 137, 140, 141, 143, 144, 146, 152, 153, 154, 155, 159,\n",
+       "       160, 163, 164, 165, 167, 168, 169, 171, 172, 173, 174, 175, 178,\n",
+       "       179, 186, 190, 195, 201, 203, 206, 207, 211, 213, 214, 215, 216,\n",
+       "       217, 219, 221, 223, 226, 227, 229, 234, 235, 237, 238, 241, 244,\n",
+       "       245, 246, 249, 250, 251, 252, 253, 255, 258, 259, 260, 261, 263,\n",
+       "       264, 265, 266, 267, 276, 284, 285, 286, 287, 289, 290, 291, 294,\n",
+       "       295, 296, 298, 301, 303, 304, 306, 309, 310, 311, 312, 313, 316,\n",
+       "       318, 322, 323, 324, 325, 327, 329, 330, 333, 341, 343, 344, 345,\n",
+       "       346, 348, 349, 350, 352, 353, 356, 358, 359, 361, 362, 370, 371,\n",
+       "       372, 375, 376, 379, 381, 382, 383, 385, 390, 391, 394, 396, 397,\n",
+       "       401, 402, 403, 407, 408, 410, 411, 412, 414, 417, 420, 425, 426,\n",
+       "       427, 430, 436, 438, 439, 440, 442, 443, 444, 445, 447, 448, 450,\n",
+       "       452, 455, 457, 458, 460, 465, 466, 467, 470, 475, 477, 478, 479,\n",
+       "       484, 485, 488, 490, 492, 493, 494, 495, 496, 498, 499])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "scatter.selection()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "unable-search",
+   "id": "acquired-championship",
    "metadata": {},
    "source": [
     "# Short-Hand Test"
@@ -193,14 +223,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "interpreted-disease",
+   "execution_count": 6,
+   "id": "finnish-notebook",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "730f3669bc544f989a15869e206c54ff",
+       "model_id": "3acc52812f91455a918ca770cf39b1a0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -231,7 +261,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "distinguished-beatles",
+   "id": "static-flower",
    "metadata": {},
    "source": [
     "# Large-Scale Test"
@@ -239,8 +269,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "placed-passenger",
+   "execution_count": 7,
+   "id": "advance-keyboard",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -306,14 +336,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "diverse-warner",
+   "execution_count": 8,
+   "id": "mysterious-surge",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f08ab01723544cc8a9e8d0d393996c29",
+       "model_id": "b908003df03a46899d37fec3e97dc894",
        "version_major": 2,
        "version_minor": 0
       },
@@ -326,14 +356,14 @@
     }
    ],
    "source": [
-    "points = np.asarray(roesslerAttractor(100000))\n",
+    "points = np.asarray(roesslerAttractor(1000000))\n",
     "jscatter.plot(points[:,0], points[:,1])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "intellectual-retirement",
+   "id": "sixth-potential",
    "metadata": {},
    "outputs": [],
    "source": []
